fix spacing on lists

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,14 @@ body{
 	font-family: 'Open Sans', 'Helvetica Neue', 'Helvetica Neue Medium', 'HelveticaNeue LT 65 Medium';
 }
 
+li {
+    line-height: inherit;
+}
+
+ol.para li {
+    margin-bottom: 10px;
+}
+
 a {
 	text-decoration: none;
 	color: #4299CE;
@@ -48,7 +56,7 @@ h3.ribbon{
 	height:61px;
 	padding-top:3px;
 	line-height: 43px;
-	background:url(../images/team_heading.png) center no-repeat;	
+	background:url(../images/heading.png) center -2px no-repeat;
 }
 
 h4 {
